--- a/assets/css/theme.css
+++ b/assets/css/theme.css
@@ -34,7 +34,7 @@ h1, h2, h3, h4, h5, h6, .h1, .h2, .h3, .h4, .h5, .h6 {
 h1.title {
     margin-right: 1rem !important;
     font-weight: normal !important;
-    font-family:Pacifico;
+    font-family: 'Pacifico', cursive;
 }
 @keyframes pulse {
   0% {
