Adiciona link para futura página do arquivo

--- a/_includes/menu-header.html
+++ b/_includes/menu-header.html
@@ -1,3 +1,8 @@
+{% comment %}
+<li class="nav-item">
+    <a class="nav-link" href="{{ site.baseurl }}/cronologia.html">Cronologia</a>
+</li>
+{% endcomment %}
 <li class="nav-item">
     <a class="nav-link" href="{{ site.baseurl }}/categorias.html">Categorias</a>
 </li>
