Atualiza descrição e rodapé

--- a/_includes/footer-copyright.html
+++ b/_includes/footer-copyright.html
@@ -1,6 +1,6 @@
-<p><span class="credits text-dark">{{ site.description }}</span></p>
+<p><span class="credits font-weight-bold text-secondary">{{ site.description }}</span></p>
 <p>
-  <span class="credits text-muted"><strong>Número total de publicações:</strong> {{ site.posts | size }}</span><br>
-  <span class="credits text-muted"><strong>Última atualização:</strong> {{ site.time | date: '%d/%m/%Y %H:%M:%S' }}</span>
+  <span class="credits text-secondary">Número total de publicações: {{ site.posts | size }}</span><br>
+  <span class="credits text-secondary">Última atualização: {{ site.time | date: '%d/%m/%Y %H:%M:%S' }}</span>
 </p>
 <p><span class="credits text-muted"><a target="_blank" class="text-muted" href="https://www.wowthemes.net/pintereso-free-bootstrap-jekyll-theme/"><u>Pintereso Jekyll Theme</u></a></span></p>
