Arruma link para assuntos

--- a/_includes/menu-header.html
+++ b/_includes/menu-header.html
@@ -1,14 +1,9 @@
-{% comment %}
-<li class="nav-item">
-    <a class="nav-link" href="{{ site.baseurl }}/cronologia.html">Cronologia</a>
-</li>
-{% endcomment %}
 <li class="nav-item">
     <a class="nav-link" href="{{ site.baseurl }}/categorias.html">Categorias</a>
 </li>
 
 <li class="nav-item">
-    <a class="nav-link" href="{{ site.baseurl }}/marcadores.html">Marcadores</a>
+    <a class="nav-link" href="{{ site.baseurl }}/assuntos.html">Assuntos</a>
 </li>
 
 <li class="nav-item">
